# sensitive-rs

./: .autocorrectrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_CN.md  clippy.toml  rust-toolchain  rustfmt.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: Build.yml  audit.yml  bench.yml  docs.yml  rust-clippy.yml
benches/: matching.rs
dict/: dict-all.txt  dict.txt  shape_map.txt
examples/: basic.rs  batch.rs  custom_dict.rs  variant.rs
src/: filter.rs  lib.rs  link_list.rs  trie.rs  wasm.rs
src/engine/: mod.rs  wumanber.rs
src/variant/: mod.rs
tests/: cli_tests.rs
tests/fixtures/: test_dict.txt
