[package]
name = "sensitive-rs"
description = "A Rust library for sensitive data detection and filtering, supporting Chinese and English text with trie-based algorithms."
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["houseme <housemecn@gmail.com>"]
repository = "https://github.com/houseme/sensitive-rs"
homepage = "https://houseme.github.io/sensitive-rs"
documentation = "https://docs.rs/sensitive-rs"
keywords = ["sensitive", "generate", "filter", "trie", "replace-verification"]
categories = ["memory-management", "encoding", "science", "algorithms"]
readme = "README.md"
# Crate build related
exclude = ["tests/*", ".gitignore"]
include = ["src/**", "dict/**", "Cargo.toml", "README.md", "README_CN.md", "LICENSE-APACHE", "LICENSE-MIT", "CHANGELOG.md"]


[dependencies]
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "charset", "http2", "system-proxy", "stream", "json", "blocking", "query", "form"], optional = true }
aho-corasick = { version = "1.1.4", features = ["perf-literal"] }
pinyin = "0.11.0"
rayon = "1.12.0"
lru = "0.18.0"
hashbrown = "0.17.0"
smallvec = "1.15.1"

[features]
default = []
net = ["dep:reqwest"]
