[package]
name = "sensitive-rs"
description = "A Rust library for sensitive data detection and filtering, supporting Chinese and English text with trie-based algorithms."
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["houseme <housemecn@gmail.com>"]
repository = "https://github.com/houseme/sensitive-rs"
homepage = "https://houseme.github.io/sensitive-rs"
documentation = "https://docs.rs/sensitive-rs"
keywords = ["sensitive", "generate", "filter", "trie", "replace-verification"]
categories = ["memory-management", "encoding", "science", "algorithms"]
readme = "README.md"
# Crate build related
exclude = ["tests/*", ".gitignore"]
include = ["src/**", "dict/**", "Cargo.toml", "README.md", "README_CN.md", "LICENSE-APACHE", "LICENSE-MIT", "CHANGELOG.md"]


[dependencies]
regex = "1.13.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "charset", "http2", "system-proxy", "stream", "json", "blocking", "query", "form"], optional = true }
aho-corasick = { version = "1.1.4", features = ["perf-literal"] }
pinyin-converter = "0.1.0"
rayon = "1.12.0"
lru = "0.18.1"
hashbrown = "0.17.1"
smallvec = "1.15.2"
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
cli = ["dep:clap", "dep:serde", "dep:serde_json"]
net = ["dep:reqwest"]

[[bin]]
name = "sensitive-rs"
path = "src/bin/main.rs"
required-features = ["cli"]

[[bin]]
name = "sensitive"
path = "src/bin/main.rs"
required-features = ["cli"]
