[package]
name = "sensitive-rs"
description = "A Rust library for sensitive data detection and filtering, supporting Chinese and English text with trie-based algorithms."
version = "1.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["houseme <housemecn@gmail.com>"]
repository = "https://github.com/houseme/sensitive-rs"
homepage = "https://houseme.github.io/sensitive-rs"
documentation = "https://docs.rs/sensitive-rs"
keywords = ["sensitive", "generate", "filter", "trie", "replace-verification"]
categories = ["memory-management", "encoding", "science", "algorithms"]
readme = "README.md"
# Crate build related
include = ["src/**", "dict/**", "benches/**", "examples/**", "Cargo.toml", "README.md", "README_CN.md", "LICENSE-APACHE", "LICENSE-MIT", "CHANGELOG.md"]


[dependencies]
regex = { version = "1.13.1", default-features = false, features = ["unicode"] }
aho-corasick = { version = "1.1.4", default-features = false }
hashbrown = "0.17.1"
pinyin-converter = { version = "0.1.0", optional = true }
lru = { version = "0.18.1", optional = true }
smallvec = "1.15.2"
rayon = { version = "1.12.0", optional = true }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "charset", "http2", "system-proxy", "stream", "json", "blocking", "query", "form"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "rt", "rt-multi-thread", "macros"], optional = true }

[features]
default = ["std", "parallel"]
std = ["dep:lru", "dep:pinyin-converter", "regex/std", "aho-corasick/std"]
cli = ["dep:clap", "dep:serde", "dep:serde_json", "std"]
net = ["dep:reqwest", "std"]
parallel = ["dep:rayon", "std"]
async-io = ["dep:tokio", "std"]
net-async = ["net", "async-io"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "std"]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "matching"
harness = false

[[bin]]
name = "sensitive-rs"
path = "src/bin/main.rs"
required-features = ["cli"]

[[bin]]
name = "sensitive"
path = "src/bin/main.rs"
required-features = ["cli"]
